agregue ubicacion imgs

--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -53,7 +53,7 @@
         <h1>Perfileria</h1>
         <div class="clearfix">
             <h3>Montante 0.34</h3>
-            <img src="./imgs/montante35.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/montante35.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 Este perfil es utilizado en tabiques, revestimientos y cielorrasos, a ellos se fijarán las placas
@@ -63,7 +63,7 @@
         </div>
         <div class="clearfix">
             <h3>Solera 0.35</h3>
-            <img src="./imgs/solera35.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/solera35.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 Este perfil es utilizado en tabiques, revestimientos y cielorrasos, a ellos se fijarán las placas
@@ -73,7 +73,7 @@
         </div>
         <div class="clearfix">
             <h3>Montante 0.69</h3>
-            <img src="./imgs/montante70.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/montante70.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 Este perfil es utilizado en tabiques, revestimientos y cielorrasos, a ellos se fijarán las placas
@@ -83,7 +83,7 @@
         </div>
         <div class="clearfix">
             <h3>Solera 0.70</h3>
-            <img src="./imgs/solera70.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/solera70.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 Este perfil es utilizado en tabiques, revestimientos y cielorrasos, a ellos se fijarán las placas
@@ -94,7 +94,7 @@
         <h2>Placas Durlock</h2>
         <div class="clearfix">
             <h3>Placa Durlock 0.95mm</h3>
-            <img src="./imgs/placas-9-5.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/placas-9-5.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 El cartón yeso, drywall, Pladur, Durlock, Tablaroca, volcanita o PYL es un material de construcción
@@ -104,7 +104,7 @@
         </div>
         <div class="clearfix">
             <h3>Placa Durlock 12.5mm</h3>
-            <img src="./imgs/placas12.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/placas12.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 El cartón yeso, drywall, Pladur, Durlock, Tablaroca, volcanita o PYL es un material de construcción
@@ -114,7 +114,7 @@
         </div>
         <div class="clearfix">
             <h3>Placa Durlock 12.5mm para baños</h3>
-            <img src="./imgs/placasbaño.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/placasbaño.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 El cartón yeso, drywall, Pladur, Durlock, Tablaroca, volcanita o PYL es un material de construcción
@@ -124,7 +124,7 @@
         </div>
         <div class="clearfix">
             <h3>Placa Durlock 12.5mm resistencia al fuego</h3>
-            <img src="./imgs/placasfuego.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
+            <img src="../imgs/placasfuego.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
 
             <p>
                 El cartón yeso, drywall, Pladur, Durlock, Tablaroca, volcanita o PYL es un material de construcción
