correcion largo de paginas - imagenes - SEO

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Durlock</title>
+  <meta name="keywords" content="imagenes,cielorrasos,durlock,perfiles,cajones">
+  <meta name="description" content="galeria sistema drywall" <title>Durlock</title>
   <link rel="stylesheet" href="../css/main.css">
   <script src="https://kit.fontawesome.com/68ba502944.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +16,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Durlock</a>
+        <a class="navbar-brand" href="../index.html">Durlock</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
