--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Durlock</title>
-    <link rel="stylesheet" href="..css/main.css">
+    <meta name="keywords"
+        content="perfiles,placas,montantes,soleras,anti humedad,anti fuego,resistencia,tabiques,tornillos">
+    <meta name="description" content="Materiales para la conestruccion del sistema drywall" <title>Durlock</title>
+    <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/68ba502944.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -15,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Durlock</a>
+                <a class="navbar-brand" href="../index.html">Durlock</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +52,7 @@
         <h1 class="h1">Durlock Argentina</h1>
     </header>
     <main>
-        <h1>Perfileria</h1>
+        <h1 class="main-h1">Perfileria</h1>
         <div class="clearfix">
             <h3>Montante 0.34</h3>
             <img src="../imgs/montante35.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
@@ -91,7 +93,7 @@
             </p>
 
         </div>
-        <h2>Placas Durlock</h2>
+        <h2 class="main-h2">Placas Durlock</h2>
         <div class="clearfix">
             <h3>Placa Durlock 0.95mm</h3>
             <img src="../imgs/placas-9-5.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="perfil-durlock">
