--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords"
         content="perfiles,placas,montantes,soleras,anti humedad,anti fuego,resistencia,tabiques,tornillos">
-    <meta name="description" content="Materiales para la conestruccion del sistema drywall" <title>Durlock</title>
+    <meta name="description" content="Materiales para la conestruccion del sistema drywall" >
+    <title>Durlock</title>
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/68ba502944.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
