--- a/pages/sistema.html
+++ b/pages/sistema.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="sistema,drywall,durlock,perfiles,tornillos,videos,ilustrativos">
-  <meta name="description" content="Sistema drywall videos ilustrativos" <title>Durlock</title>
+  <meta name="description" content="Sistema drywall videos ilustrativos" >
+  <title>Durlock</title>
   <link rel="stylesheet" href="../css/main.css">
   <script src="https://kit.fontawesome.com/68ba502944.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
